--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "mocha": "1.3.x"
   },
   "scripts": {
+    "build:debug": "node-gyp configure --debug && node-gyp build --debug",
     "test": "./node_modules/.bin/mocha tests/test_*.js tests/midgard/test_*.js"
   },
   "dependencies": {
-    "nan": "^2.0.5"
+    "nan": "^2.7.0"
   }
 }
