--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "main": "src/index.js",
   "scripts": {
+    "build": "node-gyp configure && node-gyp build",
     "build:debug": "node-gyp configure --debug && node-gyp build --debug",
     "test": "jest"
   },
