--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,40 @@
 version: 2
 
+test_steps: &test_steps
+  - checkout
+  - run: apt-get update
+  - run: apt-get install -y xvfb # xvfb for running headless tests (headless X11 server).
+  - run: apt-get install -y libgirepository1.0-dev libgtk-3-dev
+  - run: npm install
+  - run: npm run build
+  - run: xvfb-run -a npm test
+
 jobs:
   build:
     docker:
+      - image: node:latest
+    steps: *test_steps
+
+  node-9:
+    docker:
+      - image: node:9-stretch
+    steps: *test_steps
+
+  node-8:
+    docker:
       - image: node:8-stretch
-    steps:
-      - checkout
-      - run: apt-get update
-      - run: apt-get install -y xvfb # xvfb for running headless tests (headless X11 server).
-      - run: apt-get install -y libgirepository1.0-dev libgtk-3-dev libgtkmm-3.0-dev libsigc++-2.0-dev # system dependencies for gtk-node
-      - run: npm install
-      - run: npm run build
-      - run: xvfb-run -a npm test
+    steps: *test_steps
+
+  node-6:
+    docker:
+      - image: node:6-stretch
+    steps: *test_steps
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - node-9
+      - node-8
+      - node-6
