--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,7 @@ version: 2
 test_steps: &test_steps
   - checkout
   - run: apt-get update
-  - run: apt-get install -y xvfb # xvfb for running headless tests (headless X11 server).
-  - run: apt-get install -y libgirepository1.0-dev libgtk-3-dev
+  - run: apt-get install -y xvfb libgirepository1.0-dev libgtk-3-dev # xvfb for running headless tests (headless X11 server).
   - run: npm install
   - run: npm run build
   - run: xvfb-run -a npm test
