--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   ],
   "main": "src/index.js",
   "scripts": {
-    "build": "node-gyp configure && node-gyp build",
-    "build:debug": "node-gyp configure --debug && node-gyp build --debug",
+    "build": "cmake-js configure && cmake-js build",
+    "build:debug": "cmake-js configure --debug && cmake-js build --debug",
     "clean": "rm -rf ./build || true",
     "test": "jest"
   },
@@ -37,6 +37,7 @@
     "nan": "^2.8.0"
   },
   "devDependencies": {
+    "cmake-js": "^3.6.0",
     "jest": "^22.0.4"
   }
 }
