--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build:debug": "node-gyp configure --debug && node-gyp build --debug",
     "clean": "rm -rf ./build || true",
     "test": "jest",
-    "lint": "clang-format -i -style=file ./src/*.{h,cc} ./src/**/*.{h,cc}"
+    "lint": "clang-format -i -style=file ./src/*.{h,cpp} ./src/**/*.{h,cpp}"
   },
   "directories": {
     "lib": "."
