--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "nan": "^2.8.0"
   },
   "devDependencies": {
-    "jest": "^22.0.4",
     "cmake-js": "^3.6.0",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.8.0"
+    "eslint-plugin-import": "^2.8.0",
+    "jest": "^22.0.4"
   }
 }
