--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
 
   lint-cpp:
     docker:
-      - image: ubuntu
+      - image: node:8-stretch
     steps:
       - checkout
       - run: apt-get update
@@ -40,7 +40,7 @@ jobs:
     steps:
       - checkout
       - run: npm install
-      - run: run run lint:js
+      - run: npm run lint:js
 
 
 workflows:
