--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,12 +27,12 @@ jobs:
 
   lint-cpp:
     docker:
-      - image: node:8-stretch
+      - image: debian:buster
     steps:
       - checkout
-      - run: apt-get update
-      - run: apt-get install -y clang-format
-      - run: npm run lint:cpp -- -output-replacements-xml | grep -c "<replacement "; [ $? -ne 1 ] && exit 1 || exit 0
+      - run: apt update
+      - run: apt install clang-format-5.0
+      - run: clang-format-5.0 -i -style=file ./src/*.h ./src/*.cpp ./src/**/*.h ./src/**/*.cpp -output-replacements-xml | grep -c "<replacement "; [ $? -ne 1 ] && exit 1 || exit 0
 
   lint-js:
     docker:
