--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
       - checkout
       - run: apt update
-      - run: apt install clang-format-5.0
+      - run: apt install -y clang-format-5.0
       - run: clang-format-5.0 -i -style=file ./src/*.h ./src/*.cpp ./src/**/*.h ./src/**/*.cpp -output-replacements-xml | grep -c "<replacement "; [ $? -ne 1 ] && exit 1 || exit 0
 
   lint-js:
