--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - checkout
       - run: apt update
       - run: apt install -y clang-format-5.0
-      - run: clang-format-5.0 -i -style=file ./src/*.h ./src/*.cpp ./src/**/*.h ./src/**/*.cpp -output-replacements-xml | grep -c "<replacement "; [ $? -ne 1 ] && exit 1 || exit 0
+      - run: clang-format-5.0 -i -style=file ./src/*.h ./src/*.cpp ./src/**/*.h ./src/**/*.cpp -output-replacements-xml | grep -c "<replacement " > /dev/null; if [ $? -eq 0 ]; then exit 1; else exit 0; fi
 
   lint-js:
     docker:
